Added layouts folder

--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
-<!DOCTYPE>
-<html lang="en-ca">
-<head>
-	<meta charset="utf-8">
-	<title>ESTHER-MAGNET</title>
-</head>
+---
+layout: default
+---
 
-<body>
-	<h1>ESTHER-MAGNET</h1>
-</body>
-<html>
+<h1>ESTHER-MAGNET</h1>
+<h2>Welcome - Takulandilani</h2>
