Added sitemap.xml configuration.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 ---
 layout: default
+title: Home
+meta: ESTHER-MAGNET is a hospital partnership project between Malawi and Germany.
+priority: 1.0
 ---
 
 <h2>Welcome - Takulandilani</h2>
