--- a/project/index.html
+++ b/project/index.html
@@ -1,6 +1,8 @@
 ---
 layout: project
 title: About the Project
+meta: About the ESTHER-MAGNET Project
+priority: 0.5
 ---
 
 <h1>About the Project</h1>
